# pyramid-cookiecutter-alchemy

./: .gitignore  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: alembic.ini  development.ini  production.ini  setup.cfg  setup.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/managers/: __init__.py  logbook_manager.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/migrations/: README  env.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/models/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/views/: default.py  notfound.py
