[metadata]
name = {{ cookiecutter.repo_name }}
version = 0.0
author = ''
author_email = ''

license = Revised BSD License
description = {{ cookiecutter.project_name }}
long_description = file: README.txt, CHANGES.txt
keywords = web, pyramid, pylons
url = ''

classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
install_requires =
    plaster_pastedeploy
    pyramid>=1.9a
    pyramid_debugtoolbar
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy
    waitress
    alembic
    logbook


[options.extras_require]
testing = 
    WebTest >= 1.3.1
    pytest
    pytest-cov


# coverage
[coverage:run]
source = {{ cookiecutter.repo_name }}
omit = {{ cookiecutter.repo_name }}/test*


# pytest
[tool:pytest]
testpaths = {{ cookiecutter.repo_name }}
python_files = test_*.py
